--- a/index.html
+++ b/index.html
@@ -45,37 +45,37 @@
                <div class="container-first-sect">
                   <div class="circle windows">
                      <div class="circle-container container-one"> 
-                        <img id="hidden-desktop-windows" class="circle-text" src="/assets/img/f2.svg" alt="text">
-                        <img id="hidden-mobile-w" class="circle-text-mobile " src="/assets/img/f2M.svg" alt="text">
+                        <img id="hidden-desktop-windows" class="circle-text" src="assets/img/f2.svg" alt="text">
+                        <img id="hidden-mobile-w" class="circle-text-mobile " src="assets/img/f2M.svg" alt="text">
                         <img id="plus-hover-windows" class="plus-img " src="assets/img/plus.svg" alt="plus">
                      </div>
                   </div>
                   <div class="circle garden">
                      <div class="circle-container container-two">
-                        <img id="hidden-desktop-garden" class="circle-text" src="/assets/img/f1.svg" alt="text">
-                        <img id="hidden-mobile-g" class="circle-text-mobile" src="/assets/img/f1M.svg" alt="text">
+                        <img id="hidden-desktop-garden" class="circle-text" src="assets/img/f1.svg" alt="text">
+                        <img id="hidden-mobile-g" class="circle-text-mobile" src="assets/img/f1M.svg" alt="text">
                         <img id="plus-hover-garden" class="plus-img" src="assets/img/plus.svg" alt="">
                      </div>
                   </div>
                   <div class="circle partitions">
                      <div class="circle-container container-three">
-                        <img id="hidden-desktop-partitions" class="circle-text" src="/assets/img/f3.svg" alt="text">
-                        <img id="hidden-mobile-p" class="circle-text-mobile" src="/assets/img/f3M.svg" alt="text">
+                        <img id="hidden-desktop-partitions" class="circle-text" src="assets/img/f3.svg" alt="text">
+                        <img id="hidden-mobile-p" class="circle-text-mobile" src="assets/img/f3M.svg" alt="text">
                         <img id="plus-hover-partitions" class="plus-img" src="assets/img/plus.svg" alt="">
                      </div>
                   </div>
                   <div class="circle doors">
                      <div class="circle-container container-four">
-                        <img id="hidden-desktop-doors" class="circle-text doors-text" src="/assets/img/f4.svg" alt="text">
-                        <img id="hidden-mobile-d" class="circle-text-mobile" src="/assets/img/f4M.svg" alt="text">
+                        <img id="hidden-desktop-doors" class="circle-text doors-text" src="assets/img/f4.svg" alt="text">
+                        <img id="hidden-mobile-d" class="circle-text-mobile" src="assets/img/f4M.svg" alt="text">
                         <img id="plus-hover-doors" class="plus-img" src="assets/img/plus.svg" alt="">
                      </div>
                   </div>
                   <div class="circle balcony">
                      <div class="circle-container container-five">
                         
-                        <img id="hidden-desktop-balcony" class="circle-text" src="/assets/img/f5.svg" alt="text">
-                        <img id="hidden-mobile-b" class="circle-text-mobile" src="/assets/img/f5M.svg" alt="text">
+                        <img id="hidden-desktop-balcony" class="circle-text" src="assets/img/f5.svg" alt="text">
+                        <img id="hidden-mobile-b" class="circle-text-mobile" src="assets/img/f5M.svg" alt="text">
                         <img id="plus-hover-balcony" class="plus-img" src="assets/img/plus.svg" alt="">
                      </div>
                   </div>
@@ -192,14 +192,14 @@
                         <a href="#modal" class="fourth__block flex align-center  popup-link hover-colored-btn">
                            <div class="fourth__back flex align-center justify-center">1</div>
                            <div class="fourth__col flex flex-column">
-                              <span>Оставить заявку на звонок <img class="fourth-img" src="/assets/img/bx-user-voice 1.svg" alt=""></span> 
+                              <span>Оставить заявку на звонок <img class="fourth-img" src="assets/img/bx-user-voice 1.svg" alt=""></span> 
                               <span>Наш специалист вам позвонит!</span>
                            </div>
                         </a>
                         <a href="#footer-rights" class="fourth__block flex align-center hover-colored-btn">
                            <div class="fourth__back flex align-center justify-center">2</div>
                            <div class="fourth__col flex flex-column">
-                              <span>Позвонить нам <img class="fourth-img" src="/assets/img/phoneCall.svg" alt=""></span>
+                              <span>Позвонить нам <img class="fourth-img" src="assets/img/phoneCall.svg" alt=""></span>
                               <span>Нажмите, чтобы позвонить нам.</span>
                            </div>
                         </a>
@@ -442,7 +442,7 @@
                      возможность их установки в Вашем
                      помещении.</h2>
                   <div class="showroom">
-                     <video class="showroom__img" controls width="100%" height="100%"> <source src="/assets/video/video.mp4"></video>                     
+                     <video class="showroom__img" controls width="100%" height="100%"> <source src="assets/video/video.mp4"></video>                     
                      <a href="#modal" class="showroom__line popup-link">Назначить встречу</a>
                   </div>
                   <h1 class="leader__h1 mt80">“Пласт-Сервис”  25 лет производства.</h1>
@@ -458,7 +458,7 @@
                      Два цеха нашего завода полностью отданы
                      под производства современных алюминиевых конструкций.</h2>
                   <div class="showroom">
-                     <video class="showroom__img" controls width="100%" height="100%"> <source src="/assets/video/video.mp4"></video>
+                     <video class="showroom__img" controls width="100%" height="100%"> <source src="assets/video/video.mp4"></video>
 
                   </div>
                </div>
