--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                </div>
                
             </section>
-            <section class="second__sect">
+            <section id="assotr" class="second__sect">
                <img src="assets/img/line1.svg" alt="" class="first__line">
                <img src="assets/img/line2.svg" alt="" class="second__line">
                <div class="container">
@@ -237,7 +237,7 @@
                   </div>
                </div>
             </section>
-            <section class="color__sect">
+            <section id="collor_sect" class="color__sect">
                <div class="container">
                   <div class="color__flex flex justify-center">
                      <div class="color__left">
@@ -283,7 +283,7 @@
                   </div>
                </div>
             </section>
-            <section class="object__sect">
+            <section id="examples"  class="object__sect">
                <div class="container">
                   <h1 class="leader__h1 text-center">На каких объектах мы работаем?</h1>
                   <div class="object__wrapper">
@@ -372,7 +372,7 @@
                   </div>
                </div>
             </section>
-            <section class="top__sect">
+            <section id="top" class="top__sect">
                <div class="container flex align-center justify-between">
                   <div class="top__left">
                      <h1 class="leader__h1">Топ-проекты производства</h1>
@@ -427,7 +427,7 @@
                   </div>
                </div>
             </section>
-            <section class="welcome__sect">
+            <section id="showroom" class="welcome__sect">
                <img src="assets/img/line111.svg" alt="" class="line3">
                <img src="assets/img/line222.svg" alt="" class="line4">
                <div class="container">
@@ -441,7 +441,7 @@
                      особенностяхконструкций, рассчитает
                      возможность их установки в Вашем
                      помещении.</h2>
-                  <div class="showroom">
+                  <div id="film" class="showroom">
                      <video class="showroom__img" controls width="100%" height="100%"> <source src="assets/video/video.mp4"></video>                     
                      <a href="#modal" class="showroom__line popup-link">Назначить встречу</a>
                   </div>
@@ -515,12 +515,12 @@
                   <div class="footer__left flex flex-column">
                      <a href="/" class="logo"><img src="assets/img/footer_logo.svg" alt=""></a>
                      <ul class="footer__ul flex align-center">
-                        <li><a href="/">Ассортимент</a></li>
-                        <li><a href="/">Цветовые решения</a></li>
-                        <li><a href="/">Примеры работ</a></li>
-                        <li><a href="/">Шоурум</a></li>
-                        <li><a href="/">Топ-проекты</a></li>
-                        <li><a href="/">Фильм</a></li>
+                        <li><a href="#assotr">Ассортимент</a></li>
+                        <li><a href="#collor_sect">Цветовые решения</a></li>
+                        <li><a href="#examples">Примеры работ</a></li>
+                        <li><a href="#showroom">Шоурум</a></li>
+                        <li><a href="#top">Топ-проекты</a></li>
+                        <li><a href="#film">Фильм</a></li>
                      </ul>
                      <div class="footer__copy">
                         © 2008–2022 «Пласт-Сервис»
