--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                         <path d="M9.29242 5.98025C11.0395 5.98025 11.7847 6.72543 11.7847 8.47248H13.4461C13.4461 5.79333 11.9716 4.31876 9.29242 4.31876V5.98025ZM12.1352 10.502C11.9756 10.3569 11.7658 10.2795 11.5502 10.2862C11.3346 10.2929 11.13 10.383 10.9797 10.5377L8.99169 12.5822C8.51318 12.4908 7.55118 12.1909 6.56093 11.2031C5.57069 10.2121 5.27079 9.24757 5.1819 8.77238L7.2247 6.78358C7.37956 6.63332 7.46988 6.4287 7.47655 6.21303C7.48321 5.99735 7.4057 5.78755 7.26042 5.62801L4.19082 2.2527C4.04547 2.09266 3.84347 1.99559 3.6277 1.98209C3.41193 1.9686 3.19941 2.03974 3.03525 2.18042L1.23254 3.72644C1.08891 3.87058 1.00319 4.06243 0.991621 4.26559C0.97916 4.47328 0.741567 9.39295 4.55635 13.2094C7.88431 16.5365 12.053 16.7799 13.2011 16.7799C13.3689 16.7799 13.4719 16.7749 13.4993 16.7733C13.7024 16.7619 13.8942 16.6758 14.0376 16.5315L15.5828 14.728C15.7236 14.5639 15.7949 14.3515 15.7816 14.1357C15.7682 13.9199 15.6713 13.7179 15.5114 13.5724L12.1352 10.502Z" fill="white"/>
                      </svg>                        
                   </a>
-                  <div class="header__tel">(863) 000-00-00</div>
+                  <a href="tel:+8630000000" class="header__tel">(863) 000-00-00</a>
                </div>
             </div>
          </header>
@@ -96,6 +96,7 @@
                                  <img src="assets/img/1.svg" alt="">
                               </div>
                               <div class="second__text">Двери</div>
+                              <div class="object__hover">от 6 250 руб.</div>
                            </div>
                         </div>
                         <div class="col-20">
@@ -104,6 +105,7 @@
                                  <img src="assets/img/2.svg" alt="">
                               </div>
                               <div class="second__text">Окна</div>
+                              <div class="object__hover">от 6 250 руб.</div>
                            </div>
                         </div>
                         <div class="col-20">
@@ -112,6 +114,7 @@
                                  <img src="assets/img/3.svg" alt="">
                               </div>
                               <div class="second__text">Балконы</div>
+                              <div class="object__hover">от 6 250 руб.</div>
                            </div>
                         </div>
                         <div class="col-20">
@@ -120,6 +123,7 @@
                                  <img src="assets/img/4.svg" alt="">
                               </div>
                               <div class="second__text">Зенитные фонари</div>
+                              <div class="object__hover">от 6 250 руб.</div>
                            </div>
                         </div>
                         <div class="col-20">
@@ -128,6 +132,7 @@
                                  <img src="assets/img/5.svg" alt="">
                               </div>
                               <div class="second__text">Террасы и веранды</div>
+                              <div class="object__hover">от 6 250 руб.</div>
                            </div>
                         </div>
                         <div class="col-20">
@@ -136,6 +141,7 @@
                                  <img src="assets/img/6.svg" alt="">
                               </div>
                               <div class="second__text">Развижные двери</div>
+                              <div class="object__hover">от 6 250 руб.</div>
                            </div>
                         </div>
                         <div class="col-20">
@@ -144,6 +150,7 @@
                                  <img src="assets/img/7.svg" alt="">
                               </div>
                               <div class="second__text">Двери-гормошки</div>
+                              <div class="object__hover">от 6 250 руб.</div>
                            </div>
                         </div>
                         <div class="col-20">
@@ -152,6 +159,7 @@
                                  <img src="assets/img/8.svg" alt="">
                               </div>
                               <div class="second__text">Фасады</div>
+                              <div class="object__hover">от 6 250 руб.</div>
                            </div>
                         </div>
                         <div class="col-20">
@@ -160,6 +168,7 @@
                                  <img src="assets/img/9.svg" alt="">
                               </div>
                               <div class="second__text">Зимние сады</div>
+                              <div class="object__hover">от 6 250 руб.</div>
                            </div>
                         </div>
                         <div class="col-20">
@@ -168,6 +177,7 @@
                                  <img src="assets/img/10.svg" alt="">
                               </div>
                               <div class="second__text">Интерьер. перегородки</div>
+                              <div class="object__hover">от 6 250 руб.</div>
                            </div>
                         </div>
                      </div>
@@ -292,6 +302,7 @@
                            <div class="object__block">
                               <img src="assets/img/o1.png" alt="">
                               <div class="object__text">Частные дома</div>
+                              
                            </div>
                         </div>
                         <div class="col-3">
@@ -468,7 +479,7 @@
                   <div class="leader__warn">Что значит быть лучшими в своем деле?</div>
                   <h1 class="leader__h1">Как нам удается быть лидерами?</h1>
                   <div class="leader__wrapper">
-                     <div class="leader__block leader__active flex align-center hover-colored-btn">
+                     <div class="leader__block flex align-center hover-colored-btn">
                         <div class="leader__back">1</div>
                         <div class="leader__col flex flex-column">
                            <span>На шаг впереди
@@ -544,7 +555,7 @@
                            </a>
                         </div>
                         
-                        <div class="footer__tel">(863) 000-00-00</div>
+                        <a href="tel:+8630000000" class="footer__tel">(863) 000-00-00</a>
                      </div>
                   </div>
                </div>
