--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                         <path d="M9.29242 5.98025C11.0395 5.98025 11.7847 6.72543 11.7847 8.47248H13.4461C13.4461 5.79333 11.9716 4.31876 9.29242 4.31876V5.98025ZM12.1352 10.502C11.9756 10.3569 11.7658 10.2795 11.5502 10.2862C11.3346 10.2929 11.13 10.383 10.9797 10.5377L8.99169 12.5822C8.51318 12.4908 7.55118 12.1909 6.56093 11.2031C5.57069 10.2121 5.27079 9.24757 5.1819 8.77238L7.2247 6.78358C7.37956 6.63332 7.46988 6.4287 7.47655 6.21303C7.48321 5.99735 7.4057 5.78755 7.26042 5.62801L4.19082 2.2527C4.04547 2.09266 3.84347 1.99559 3.6277 1.98209C3.41193 1.9686 3.19941 2.03974 3.03525 2.18042L1.23254 3.72644C1.08891 3.87058 1.00319 4.06243 0.991621 4.26559C0.97916 4.47328 0.741567 9.39295 4.55635 13.2094C7.88431 16.5365 12.053 16.7799 13.2011 16.7799C13.3689 16.7799 13.4719 16.7749 13.4993 16.7733C13.7024 16.7619 13.8942 16.6758 14.0376 16.5315L15.5828 14.728C15.7236 14.5639 15.7949 14.3515 15.7816 14.1357C15.7682 13.9199 15.6713 13.7179 15.5114 13.5724L12.1352 10.502Z" fill="white"/>
                      </svg>                        
                   </a>
-                  <a href="tel:+8630000000" class="header__tel">(863) 000-00-00</a>
+                  <a href="tel:+70000000000" class="header__tel">+7 0000000000</a>
                </div>
             </div>
          </header>
@@ -453,7 +453,7 @@
                      возможность их установки в Вашем
                      помещении.</h2>
                   <div id="film" class="showroom">
-                     <video class="showroom__img" controls width="100%" height="100%"> <source src="assets/video/video.mp4"></video>                     
+                     <video class="showroom__vid" controls > <source src="assets/video/video.mp4"></video>                     
                      <a href="#modal" class="showroom__line popup-link">Назначить встречу</a>
                   </div>
                   <h1 class="leader__h1 mt80">“Пласт-Сервис”  25 лет производства.</h1>
@@ -469,7 +469,7 @@
                      Два цеха нашего завода полностью отданы
                      под производства современных алюминиевых конструкций.</h2>
                   <div class="showroom">
-                     <video class="showroom__img" controls width="100%" height="100%"> <source src="assets/video/video.mp4"></video>
+                     <video class="showroom__film" controls width="100%" height="100%"> <source src="assets/video/video2.mp4"></video>
 
                   </div>
                </div>
@@ -555,7 +555,7 @@
                            </a>
                         </div>
                         
-                        <a href="tel:+8630000000" class="footer__tel">(863) 000-00-00</a>
+                        <a href="tel:+70000000000" class="footer__tel">+7 0000000000</a>
                      </div>
                   </div>
                </div>
