--- a/index.html
+++ b/index.html
@@ -453,7 +453,7 @@
                      возможность их установки в Вашем
                      помещении.</h2>
                   <div id="film" class="showroom">
-                     <video class="showroom__vid" controls > <source src="assets/video/video.mp4"></video>                     
+                     <video preload="metadata" class="showroom__vid" controls > <source src="assets/video/video.mp4"></video>                     
                      <a href="#modal" class="showroom__line popup-link">Назначить встречу</a>
                   </div>
                   <h1 class="leader__h1 mt80">“Пласт-Сервис”  25 лет производства.</h1>
@@ -469,7 +469,7 @@
                      Два цеха нашего завода полностью отданы
                      под производства современных алюминиевых конструкций.</h2>
                   <div class="showroom">
-                     <video class="showroom__film" controls width="100%" height="100%"> <source src="assets/video/video2.mp4"></video>
+                     <video preload="metadata" class="showroom__film" controls width="100%" height="100%"> <source src="assets/video/video2.mp4"></video>
 
                   </div>
                </div>
